WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138430
RenderBlock shouldn't need a pre-destructor hook.
https://bugs.webkit.org/show_bug.cgi?id=138430
Summary
RenderBlock shouldn't need a pre-destructor hook.
Andreas Kling
Reported
2014-11-05 10:19:33 PST
RenderBlock does nothing interesting in willBeDestroyed() and can make do with a plain destructor.
Attachments
Patch
(2.63 KB, patch)
2014-11-05 10:21 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2014-11-05 10:21:15 PST
Created
attachment 241038
[details]
Patch
WebKit Commit Bot
Comment 2
2014-11-05 13:22:47 PST
Comment on
attachment 241038
[details]
Patch Clearing flags on attachment: 241038 Committed
r175640
: <
http://trac.webkit.org/changeset/175640
>
WebKit Commit Bot
Comment 3
2014-11-05 13:22:51 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug