RenderBlock shouldn't need a pre-destructor hook. <https://webkit.org/b/138430>

Reviewed by Antti Koivisto.

All that was interesting in RenderBlock::willBeDestroyed() has migrated
to RenderBlockFlow. removeFromUpdateScrollInfoAfterLayoutTransaction()
can be called from the plain destructor, so just move it there.

We don't have to worry about destroyLeftoverChildren(), since RenderElement
will take care of that for us.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::~RenderBlock):
(WebCore::RenderBlock::willBeDestroyed): Deleted.
* rendering/RenderBlock.h:


Canonical link: https://commits.webkit.org/156259@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175640 268f45cc-cd09-0410-ab3c-d52691b4dbfc