Source/WebCore/rendering/RenderBlock.cpp
@@ -223,6 +223,8 @@ static void removeBlockFromDescendantAndContainerMaps(RenderBlock* block, Tracke
 
 RenderBlock::~RenderBlock()
 {
+    removeFromUpdateScrollInfoAfterLayoutTransaction();
+
     if (gRareDataMap)
         gRareDataMap->remove(this);
     if (gPercentHeightDescendantsMap)
@@ -234,17 +236,6 @@ RenderBlock::~RenderBlock()
 bool RenderBlock::hasRareData() const
 {
     return gRareDataMap ? gRareDataMap->contains(this) : false;
-}
-
-void RenderBlock::willBeDestroyed()
-{
-    // Make sure to destroy anonymous children first while they are still connected to the rest of the tree, so that they will
-    // properly dirty line boxes that they are removed from. Effects that do :before/:after only on hover could crash otherwise.
-    destroyLeftoverChildren();
-
-    removeFromUpdateScrollInfoAfterLayoutTransaction();
-
-    RenderBox::willBeDestroyed();
 }
 
 void RenderBlock::styleWillChange(StyleDifference diff, const RenderStyle& newStyle)
