Source/WebCore/rendering/RenderBlock.h
@@ -316,7 +316,6 @@ public:
 
 protected:
     virtual RenderFlowThread* locateFlowThreadContainingBlock() const override;
-    virtual void willBeDestroyed() override;
 
     virtual void layout() override;
 
